# pseudolab-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  mysql.sh  pyproject.toml
.github/workflows/: deploy-dev.yaml  deploy-main.yaml  docker-compose-cd.yaml  test.yaml
app/: alembic.ini  main.py  start.py
app/api/: __init__.py
app/api/auth/: __init__.py  discord_login.py  routes.py  schema.py
app/api/auth/handlers/: social_login.py
app/api/auth/services/: bingo_login.py  jwts.py  social_login.py
app/api/being_pst/setting/: routes.py  schema.py  services.py
app/api/bingo/: __init__.py
app/api/bingo/bingo_boards/: __init__.py  routes.py  schema.py  services.py  use_cases.py  views.py
app/api/bingo/bingo_interaction/: routes.py  schema.py  services.py
app/api/bingo/meta_word/: __init__.py  routes.py  (+3 more)
app/config/: .env.example
app/core/: base_schema.py  db.py  dependencies.py  log.py
app/managers/: __init__.py
app/migrations/: env.py
app/migrations/versions/: 0f339e9d058d_user_table_add_schema.py  13fddd167a33_initialize_entity.py  86d3c8de1646_add_being_pst.py  e8ef753e6b86_add_bingo.py  ef31eeadc783_test.py
app/models/: __init__.py  base.py  user.py
app/models/apply/: __init__.py  academy.py  form.py
app/models/being_pst/: __init__.py  pst_cart.py  pst_category.py  pst_sentence.py  pst_sentence_market.py  pst_user.py
app/models/bingo/: __init__.py  bingo_boards.py  bingo_interaction.py  meta_word.py  schema.py  user_word_status.py
app/models/board/: __init__.py  boards.py  comments.py  schema.py
migrations/: env.py
(+6 files in other folders)
