[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["4roring <4roring@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.25"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
