[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["4roring <4roring@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
gunicorn = "^21.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
cryptography = "^42.0.5"
alembic = "^1.13.1"
tzdata = "^2024.1"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120